<resources>
    <string name="clothes_app_name">服装管理</string>
    <string name="owner">owner</string>
    <string name="purchase">采购员</string>
    <string name="employee">店员</string>
    <string name="name">名字</string>
    <string name="pass">密码</string>

    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="nav_header_title">名字</string>
    <string name="nav_header_subtitle">店铺</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

    <string name="clothes_name">类型:</string>
    <string name="clothes_feature">特征/属性:</string>
    <string name="clothes_brand">品牌:</string>
    <string name="clothes_type">男/女装:</string>
    <string name="clothes_size">尺码:</string>
    <string name="clothes_texture">材质:</string>
    <string name="clothes_collar">领型:</string>
    <string name="clothes_sleeve">袖长:</string>
    <string name="clothes_batch">货号:</string>
    <string name="clothes_cost">原价:</string>
    <string name="clothes_sale">卖价:</string>
    <string name="clothes_profit">单品利润:</string>
    <string name="clothes_number">剩余数量:</string>
    <string name="clothes_sale_name">店员:</string>
    <string name="clothes_sale_time">卖出时间:</string>
    <string name="clothes_color">颜色:</string>
    <string name="clothes_store">店铺:</string>
</resources>
