<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detail.DetailActivity">
    <include layout="@layout/header_view"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_name"/>
        <TextView
            android:id="@+id/activity_detail_clothes_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_feature"/>
        <TextView
            android:id="@+id/activity_detail_clothes_feature_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_brand"/>
        <TextView
            android:id="@+id/activity_detail_clothes_brand_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_type"/>
        <TextView
            android:id="@+id/activity_detail_clothes_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_size"/>
        <TextView
            android:id="@+id/activity_detail_clothes_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_texture"/>
        <TextView
            android:id="@+id/activity_detail_clothes_texture_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_collar"/>
        <TextView
            android:id="@+id/activity_detail_clothes_collar_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_sleeve"/>
        <TextView
            android:id="@+id/activity_detail_clothes_sleeve_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_batch"/>
        <TextView
            android:id="@+id/activity_detail_clothes_batch_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_cost"/>
        <TextView
            android:id="@+id/activity_detail_clothes_cost_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_profit"/>
        <TextView
            android:id="@+id/activity_detail_clothes_profit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:text="@string/clothes_number"/>
        <TextView
            android:id="@+id/activity_detail_clothes_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/high_size"
            android:layout_centerHorizontal="true"
            android:text="H102023"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

   <LinearLayout
       android:layout_marginTop="@dimen/normal_20dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center">
       <ImageView
           android:layout_width="60dp"
           android:layout_height="60dp"
           android:src="@drawable/ic_sell"/>
       <ImageView
           android:layout_marginLeft="50dp"
           android:layout_width="60dp"
           android:layout_height="60dp"
           android:src="@drawable/ic_fix"/>
   </LinearLayout>

</LinearLayout>