<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_name"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:minWidth="100dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_feature"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_feature_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_brand"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_brand_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_type"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_size"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_texture"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_texture_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_collar"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_collar_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_sleeve"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_sleeve_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_batch"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_batch_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_cost"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_cost_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_profit"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_profit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes_number"
            android:textSize="@dimen/high_size"/>

        <EditText
            android:id="@+id/activity_detail_clothes_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/high_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"/>
</merge>
